--- a/xss/production/test/carousel.html
+++ b/xss/production/test/carousel.html
@@ -83,95 +83,85 @@ new THREE.Scene(
 var camera_w_id_12 = 
 new THREE.Camera(
 45,1.5,1,10000);
-                camera_w_id_12.position.x = 500
-                camera_w_id_12.position.y = 500
-                camera_w_id_12.position.z = 1000
-	var img1_plane = 
+                camera_w_id_12.position.x = 500;
+                camera_w_id_12.position.y = 500;
+                camera_w_id_12.position.z = 1000;
+	    var img1_plane = 
 new THREE.Plane(
 128,164);
-	var img1 = new THREE.Mesh(img1_plane,
-	);
-	scene.addObject(img1);
-	var img1_reflect_plane = 
+	    var img1 = new THREE.Mesh(img1_plane, materials[0]);
+	    scene.addObject(img1);
+	    var img1_reflect_plane = 
 new THREE.Plane(
 128,164);
-	var img1_reflect = new THREE.Mesh(img1_reflect_plane,
-	);
-	scene.addObject(img1_reflect);
-                img1_reflect.doubleSided = true
-                img1_reflect.scale.y = 0.800000012
-                img1_reflect.position.y = -131.2
-                img1_reflect.rotation.x = Math.PI
-	var img2_plane = 
+	    var img1_reflect = new THREE.Mesh(img1_reflect_plane, materials[1]);
+	    scene.addObject(img1_reflect);
+                img1_reflect.doubleSided = true;
+                img1_reflect.scale.y = 0.800000012;
+                img1_reflect.position.y = -131.2;
+                img1_reflect.rotation.x = Math.PI;
+	    var img2_plane = 
 new THREE.Plane(
 128,164);
-	var img2 = new THREE.Mesh(img2_plane,
-	);
-	scene.addObject(img2);
-	var img2_reflect_plane = 
+	    var img2 = new THREE.Mesh(img2_plane, materials[2]);
+	    scene.addObject(img2);
+	    var img2_reflect_plane = 
 new THREE.Plane(
 128,164);
-	var img2_reflect = new THREE.Mesh(img2_reflect_plane,
-	);
-	scene.addObject(img2_reflect);
-                img2_reflect.doubleSided = true
-                img2_reflect.scale.y = 0.800000012
-                img2_reflect.position.y = -131.2
-                img2_reflect.rotation.x = Math.PI
-	var img3_plane = 
+	    var img2_reflect = new THREE.Mesh(img2_reflect_plane, materials[3]);
+	    scene.addObject(img2_reflect);
+                img2_reflect.doubleSided = true;
+                img2_reflect.scale.y = 0.800000012;
+                img2_reflect.position.y = -131.2;
+                img2_reflect.rotation.x = Math.PI;
+	    var img3_plane = 
 new THREE.Plane(
 128,164);
-	var img3 = new THREE.Mesh(img3_plane,
-	);
-	scene.addObject(img3);
-	var img3_reflect_plane = 
+	    var img3 = new THREE.Mesh(img3_plane, materials[4]);
+	    scene.addObject(img3);
+	    var img3_reflect_plane = 
 new THREE.Plane(
 128,164);
-	var img3_reflect = new THREE.Mesh(img3_reflect_plane,
-	);
-	scene.addObject(img3_reflect);
-                img3_reflect.doubleSided = true
-                img3_reflect.scale.y = 0.800000012
-                img3_reflect.position.y = -131.2
-                img3_reflect.rotation.x = Math.PI
-	var img4_plane = 
+	    var img3_reflect = new THREE.Mesh(img3_reflect_plane, materials[5]);
+	    scene.addObject(img3_reflect);
+                img3_reflect.doubleSided = true;
+                img3_reflect.scale.y = 0.800000012;
+                img3_reflect.position.y = -131.2;
+                img3_reflect.rotation.x = Math.PI;
+	    var img4_plane = 
 new THREE.Plane(
 128,164);
-	var img4 = new THREE.Mesh(img4_plane,
-	);
-	scene.addObject(img4);
-	var img4_reflect_plane = 
+	    var img4 = new THREE.Mesh(img4_plane, materials[6]);
+	    scene.addObject(img4);
+	    var img4_reflect_plane = 
 new THREE.Plane(
 128,164);
-	var img4_reflect = new THREE.Mesh(img4_reflect_plane,
-	);
-	scene.addObject(img4_reflect);
-                img4_reflect.doubleSided = true
-                img4_reflect.scale.y = 0.800000012
-                img4_reflect.position.y = -131.2
-                img4_reflect.rotation.x = Math.PI
-	var img5_plane = 
+	    var img4_reflect = new THREE.Mesh(img4_reflect_plane, materials[7]);
+	    scene.addObject(img4_reflect);
+                img4_reflect.doubleSided = true;
+                img4_reflect.scale.y = 0.800000012;
+                img4_reflect.position.y = -131.2;
+                img4_reflect.rotation.x = Math.PI;
+	    var img5_plane = 
 new THREE.Plane(
 128,164);
-	var img5 = new THREE.Mesh(img5_plane,
-	);
-	scene.addObject(img5);
-	var img5_reflect_plane = 
+	    var img5 = new THREE.Mesh(img5_plane, materials[8]);
+	    scene.addObject(img5);
+	    var img5_reflect_plane = 
 new THREE.Plane(
 128,164);
-	var img5_reflect = new THREE.Mesh(img5_reflect_plane,
-	);
-	scene.addObject(img5_reflect);
-                img5_reflect.doubleSided = true
-                img5_reflect.scale.y = 0.800000012
-                img5_reflect.position.y = -131.2
-                img5_reflect.rotation.x = Math.PI
-                application.angle = null
-                application.start = 0
-                application.speed = 0.200000003
-                application.step = 2 * Math.PI / 5
-                application.max_rotation = 2 * Math.PI
-                application.img_array = [img1, img1_reflect, img2, img2_reflect, img3, img3_reflect, img4, img4_reflect, img5, img5_reflect]
+	    var img5_reflect = new THREE.Mesh(img5_reflect_plane, materials[9]);
+	    scene.addObject(img5_reflect);
+                img5_reflect.doubleSided = true;
+                img5_reflect.scale.y = 0.800000012;
+                img5_reflect.position.y = -131.2;
+                img5_reflect.rotation.x = Math.PI;
+                application.angle = null;
+                application.start = 0;
+                application.speed = 0.200000003;
+                application.step = 2 * Math.PI / 5;
+                application.max_rotation = 2 * Math.PI;
+                application.img_array = [img1, img1_reflect, img2, img2_reflect, img3, img3_reflect, img4, img4_reflect, img5, img5_reflect];
 	application.position_items = function() 
 	{
 		this.start = this.start + this.speed;
