--- a/xss/production/test/3js_cameras.html
+++ b/xss/production/test/3js_cameras.html
@@ -80,90 +80,83 @@ new THREE.Scene(
 	var camera_1 = new THREE.QuakeCamera({
 	fov:50,aspect:1.5,near:1,far:10000,movementSpeed:70,lookSpeed:0.0500000007,noFly:true,lookVertical:false
 	});
-                camera_1.position.x = -250
-                camera_1.position.y = 25
+                camera_1.position.x = -250;
+                camera_1.position.y = 25;
 var camera_2 = 
 new THREE.Camera(
 50,1.5,1,10000);
-                camera_2.position.x = -250
-                camera_2.position.y = 25
+                camera_2.position.x = -250;
+                camera_2.position.y = 25;
 var light = 
 new THREE.DirectionalLight(
 16777215);
 		;
 	scene.addLight(light);
-                light.position.y = 0.5
-                light.position.z = 1
-	var sphere_1_sphere = 
+                light.position.y = 0.5;
+                light.position.z = 1;
+	    var sphere_1_sphere = 
 new THREE.Sphere(
 20,32,16);
-	var sphere_1 = new THREE.Mesh(sphere_1_sphere,
-	material_sphere1);
-	scene.addObject(sphere_1);
-                sphere_1.position.x = 250
-                sphere_1.position.y = 30
-	var sphere_2_sphere = 
+	    var sphere_1 = new THREE.Mesh(sphere_1_sphere, material_sphere1);
+	    scene.addObject(sphere_1);
+                sphere_1.position.x = 250;
+                sphere_1.position.y = 30;
+	    var sphere_2_sphere = 
 new THREE.Sphere(
 20,32,16);
-	var sphere_2 = new THREE.Mesh(sphere_2_sphere,
-	material_sphere2);
-	scene.addObject(sphere_2);
-                sphere_2.position.x = -250
-                sphere_2.position.y = 30
-	var cylinder_1_cylinder = 
+	    var sphere_2 = new THREE.Mesh(sphere_2_sphere, material_sphere2);
+	    scene.addObject(sphere_2);
+                sphere_2.position.x = -250;
+                sphere_2.position.y = 30;
+	    var cylinder_1_cylinder = 
 new THREE.Cylinder(
 20,10,10,50);
-	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
-	cylinder_material);
-	scene.addObject(cylinder_1);
-                cylinder_1.rotation.x = 10
-                cylinder_1.rotation.y = 10
-                cylinder_1.position.x = 100
-                cylinder_1.position.y = 30
-                cylinder_1.position.z = 100
-	var cylinder_2_cylinder = 
+	    var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
+	    scene.addObject(cylinder_1);
+                cylinder_1.rotation.x = 10;
+                cylinder_1.rotation.y = 10;
+                cylinder_1.position.x = 100;
+                cylinder_1.position.y = 30;
+                cylinder_1.position.z = 100;
+	    var cylinder_2_cylinder = 
 new THREE.Cylinder(
 20,10,10,50);
-	var cylinder_2 = new THREE.Mesh(cylinder_2_cylinder,
-	cylinder1_material);
-	scene.addObject(cylinder_2);
-                cylinder_2.rotation.x = 10
-                cylinder_2.rotation.y = 10
-                cylinder_2.position.x = -100
-                cylinder_2.position.y = 30
-                cylinder_2.position.z = 100
-	var cube_1_cube = 
+	    var cylinder_2 = new THREE.Mesh(cylinder_2_cylinder, cylinder1_material);
+	    scene.addObject(cylinder_2);
+                cylinder_2.rotation.x = 10;
+                cylinder_2.rotation.y = 10;
+                cylinder_2.position.x = -100;
+                cylinder_2.position.y = 30;
+                cylinder_2.position.z = 100;
+	    var cube_1_cube = 
 new THREE.Cube(
 30,30,30);
-	var cube_1 = new THREE.Mesh(cube_1_cube,
-	cube_material);
-	scene.addObject(cube_1);
-                cube_1.position.x = -100
-                cube_1.position.y = 30
-                cube_1.position.z = -100
-                cube_1.rotation.x = 10
-                cube_1.rotation.y = 10
-	var cube_2_cube = 
+	    var cube_1 = new THREE.Mesh(cube_1_cube, cube_material);
+	    scene.addObject(cube_1);
+                cube_1.position.x = -100;
+                cube_1.position.y = 30;
+                cube_1.position.z = -100;
+                cube_1.rotation.x = 10;
+                cube_1.rotation.y = 10;
+	    var cube_2_cube = 
 new THREE.Cube(
 30,30,30);
-	var cube_2 = new THREE.Mesh(cube_2_cube,
-	cube1_material);
-	scene.addObject(cube_2);
-                cube_2.position.x = 100
-                cube_2.position.y = 30
-                cube_2.position.z = -100
-                cube_2.rotation.x = 10
-                cube_2.rotation.y = 10
-	var plane_1_plane = 
+	    var cube_2 = new THREE.Mesh(cube_2_cube, cube1_material);
+	    scene.addObject(cube_2);
+                cube_2.position.x = 100;
+                cube_2.position.y = 30;
+                cube_2.position.z = -100;
+                cube_2.rotation.x = 10;
+                cube_2.rotation.y = 10;
+	    var plane_1_plane = 
 new THREE.Plane(
 1000,1000,100,100);
-	var plane_1 = new THREE.Mesh(plane_1_plane,
-	material_wireframe);
-	scene.addObject(plane_1);
-                plane_1.position.y = 0.100000001
-                plane_1.rotation.x = -1.57
-                application.is_ctrl_down = false
-                application.is_shift_down = false
+	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
+	    scene.addObject(plane_1);
+                plane_1.position.y = 0.100000001;
+                plane_1.rotation.x = -1.57;
+                application.is_ctrl_down = false;
+                application.is_shift_down = false;
 	document.addEventListener( 'keydown', keydown_application, false );
 	function keydown_application (event)
 	{   
