--- a/xss/production/test/3js_cube_img.html
+++ b/xss/production/test/3js_cube_img.html
@@ -122,38 +122,36 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-                camera_1.position.y = 300
-                camera_1.position.z = 500
-	var cube_1_cube = 
+                camera_1.position.y = 300;
+                camera_1.position.z = 500;
+	    var cube_1_cube = 
 new THREE.Cube(
 200,200,200,1,1,1,materials);
-	var cube_1 = new THREE.Mesh(cube_1_cube,
-	new THREE.MeshFaceMaterial());
-	scene.addObject(cube_1);
-                cube_1.position.y = 150
-	var plane_1_plane = 
+	    var cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
+	    scene.addObject(cube_1);
+                cube_1.position.y = 150;
+	    var plane_1_plane = 
 new THREE.Plane(
 200,200);
-	var plane_1 = new THREE.Mesh(plane_1_plane,
-	plane_material);
-	scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57
+	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
+	    scene.addObject(plane_1);
+                plane_1.rotation.x = -1.57;
 	var sound_w_id_12 = new THREE.Sound(streamer.get_resource('sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg').asset
 	,700,20,true
 	);
 	scene.addObject(sound_w_id_12);
 	sound_w_id_12.play();
-                application.x_target_rotation = 0
-                application.x_target_rotation_on_mouse_down = 0
-                application.mouse_x = 0
-                application.mouse_x_on_mouse_down = 0
-                application.y_target_rotation = 0
-                application.y_target_rotation_on_mouse_down = 0
-                application.mouse_y = 0
-                application.mouse_y_on_mouse_down = 0
-                application.window_half_x = window.innerWidth / 2
-                application.window_half_y = window.innerHeight / 2
-                application.is_mouse_down = false
+                application.x_target_rotation = 0;
+                application.x_target_rotation_on_mouse_down = 0;
+                application.mouse_x = 0;
+                application.mouse_x_on_mouse_down = 0;
+                application.y_target_rotation = 0;
+                application.y_target_rotation_on_mouse_down = 0;
+                application.mouse_y = 0;
+                application.mouse_y_on_mouse_down = 0;
+                application.window_half_x = window.innerWidth / 2;
+                application.window_half_y = window.innerHeight / 2;
+                application.is_mouse_down = false;
 	document.addEventListener( 'mousedown', mousedown_application, false );
 	function mousedown_application (event)
 	{
