--- a/xss/production/test/3js_particle.html
+++ b/xss/production/test/3js_particle.html
@@ -49,17 +49,17 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-                camera_1.position.y = 300
-                camera_1.position.z = 500
+                camera_1.position.y = 300;
+                camera_1.position.z = 500;
 			var particle_1 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: Math.random()*0x808008, program: program_fill, } 
 			) );	
 			scene.addObject( particle_1 );	
-                particle_1.position.y = 150
-                particle_1.scale.x = 5
-                particle_1.scale.y = 5
-                particle_1.scale.z = 5
+                particle_1.position.y = 150;
+                particle_1.scale.x = 5;
+                particle_1.scale.y = 5;
+                particle_1.scale.z = 5;
 if(ui)
 {
 	ui.load_resources(function(){		
