--- a/xss/production/test/cube.html
+++ b/xss/production/test/cube.html
@@ -76,33 +76,31 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-                camera_1.position.y = 300
-                camera_1.position.z = 500
-	var cube_1_cube = 
+                camera_1.position.y = 300;
+                camera_1.position.z = 500;
+	    var cube_1_cube = 
 new THREE.Cube(
 200,200,200);
-	var cube_1 = new THREE.Mesh(cube_1_cube,
-	);
-	scene.addObject(cube_1);
-                cube_1.position.y = 150
-	var plane_1_plane = 
+	    var cube_1 = new THREE.Mesh(cube_1_cube, cube_faces);
+	    scene.addObject(cube_1);
+                cube_1.position.y = 150;
+	    var plane_1_plane = 
 new THREE.Plane(
 200,200);
-	var plane_1 = new THREE.Mesh(plane_1_plane,
-	);
-	scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57
-                application.x_target_rotation = 0
-                application.x_target_rotation_on_mouse_down = 0
-                application.mouse_x = 0
-                application.mouse_x_on_mouse_down = 0
-                application.y_target_rotation = 0
-                application.y_target_rotation_on_mouse_down = 0
-                application.mouse_y = 0
-                application.mouse_y_on_mouse_down = 0
-                application.window_half_x = window.innerWidth / 2
-                application.window_half_y = window.innerHeight / 2
-                application.is_mouse_down = false
+	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
+	    scene.addObject(plane_1);
+                plane_1.rotation.x = -1.57;
+                application.x_target_rotation = 0;
+                application.x_target_rotation_on_mouse_down = 0;
+                application.mouse_x = 0;
+                application.mouse_x_on_mouse_down = 0;
+                application.y_target_rotation = 0;
+                application.y_target_rotation_on_mouse_down = 0;
+                application.mouse_y = 0;
+                application.mouse_y_on_mouse_down = 0;
+                application.window_half_x = window.innerWidth / 2;
+                application.window_half_y = window.innerHeight / 2;
+                application.is_mouse_down = false;
 	document.addEventListener( 'mousedown', mousedown_application, false );
 	function mousedown_application (event)
 	{
