--- a/xss/production/test/jquery4.html
+++ b/xss/production/test/jquery4.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>TITLE</title>
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="../js/jquery.js"></script>
 <script type="text/javascript">
 $(function() {
         application.target = null;
@@ -26,22 +26,22 @@ btn2.width(100);
 btn1.text("...");
 btn2.text("...");
 	};
-                btn1.text("One button")
-                btn1.width(100)
+                btn1.text("One button");
+                btn1.width(100);
 	btn1.click = function()
 	{    
 		btn2.text("Clicked");
 btn1.text("Other Clicked");
 	};
-                btn2.text("Two button")
-                btn2.width(100)
+                btn2.text("Two button");
+                btn2.width(100);
 	btn2.click = function()
 	{    
 		btn1.text("Old value: " + application.target);
 application.target_set(300);
 	};
-                btn3.text("Reset")
-                btn3.width(100)
+                btn3.text("Reset");
+                btn3.width(100);
 	btn3.click = function()
 	{    
 		application.reset();
