--- a/xss/production/test/jquery5.html
+++ b/xss/production/test/jquery5.html
@@ -6,22 +6,22 @@
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript">
 $(function() {
-                btn1.text("One button")
-                btn1.width(100)
+                btn1.text("One button");
+                btn1.width(100);
 	btn1.click = function()
 	{    
 		btn2.text("Clicked");
 btn1.text("Other Clicked");
 	};
-                btn2.text("Two button")
-                btn2.width(100)
+                btn2.text("Two button");
+                btn2.width(100);
 	btn2.click = function()
 	{    
 		btn1.text("Old value: " + application.target);
 application.target_set(300);
 	};
-                btn3.text("Reset")
-                btn3.width(100)
+                btn3.text("Reset");
+                btn3.width(100);
 	btn3.click = function()
 	{    
 		application.reset();
