--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -39,7 +39,7 @@ function start(resolution)
         {
     initialize: function($super
                 , manager
-                    )
+                )
     {
         $super(
         manager        );
@@ -72,7 +72,7 @@ function start(resolution)
     },
                 target : null,
 });
-                application.target = 0
+                application.target = 0;
 test_sequence =
 new fade_in(
 g_sequence_manager);
