--- a/xss/production/test/ms6.html
+++ b/xss/production/test/ms6.html
@@ -9,18 +9,46 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
-<script type="text/javascript">			
+<script type="text/javascript">	
+var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+		if(drawingCanvas){
+			var client =
+			{
+				width: 600,
+				height: 400,
+				canvas: drawingCanvas
+			};
+			var ui = new ms.ui.Manager(client, streamer);
+			var g_ui = ui;
+			var g_ui_root = ui.root;
+		}
 		var g_sequence_manager = new ms.state.Manager();
         function default_interpolate(a, b, t)
         {
             return a + (b - a)*t;
         }
+		var streamer = new ms.streamer.Streamer();
+        var def_package_items = [];
+                def_package_items.push(
+            {
+		id:"",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_grin_48.png"
+});
+                def_package_items.push(
+            {
+		id:"",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_sad_48.png"
+});
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	var start = new Date().getTime();  
@@ -42,17 +70,70 @@ function start(resolution)
             ms6 = Class.create(ms.ui.Component,
         {
     initialize: function($super
-        )
+    )
     {
         $super(
                 );
-    },
+                this.size(50, 100);
+                var anim1;
+this.anim1 =
+new ms.state.Sequence(
+g_sequence_manager);
+            this.anim1.parent_sequence = null;
+                    var ____i1 = new ms.state.Interpolator(
+                        "alpha", 
+                        default_interpolate,
+                        function(value)
+                        {
+                            btn1.alpha(value);
+                        },
+                        [
+                        {t: 0, value: 1},
+                        {t: 10.5, value: 0},
+                        ]);
+                    this.anim1.addAction(null, "alpha", new ms.state.State(0, 10.5, ____i1));                    
+                anim1 = this.anim1;
+                var btn1;
+		    this.btn1 = new ms.ui.Button( 
+	    "images/smile_sad_48.png","images/smile_grin_48.png",this.manager, this);
+                this.btn1.set_height(50);
+	this.btn1.click = function()
+	{    
+		if (btn2.get_alpha() > 0)
+{
+btn2.alpha(btn2.get_alpha() - 0.100000001);
+}
+else
+{
+btn2.alpha(1);
+}
+	};
+ this.btn1.top(50); 
+                btn1 = this.btn1;
+                var btn2;
+		    this.btn2 = new ms.ui.Button( 
+	    "images/smile_grin_48.png","images/smile_sad_48.png",this.manager, this);
+                this.btn2.set_height(50);
+	this.btn2.click = function()
+	{    
+		if (anim1.running)
+{
+anim1.stop();
+}
+else
+{
+anim1.start();
+}
+	};
+ this.btn2.bottom(50); 
+                btn2 = this.btn2;
+                },
     });
 window.onload = function() 
 {
 	var Sound = new ms.ui.Sound();
-	var drawingCanvas = document.getElementById("myCanvas");
-	g_canvas = drawingCanvas;
+	drawingCanvas = document.getElementById("myCanvas");
+    g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
 	{
 		var client =
@@ -66,33 +147,36 @@ window.onload = function()
         g_ui_root = ui.root;
      	ui.load_resources(function()
 		{
-			drawingCanvas.onmousemove = function(ev)
-			{
-				ui.mouse_move(ev.clientX, ev.clientY);                  
-			};
-			drawingCanvas.onmousedown = function(ev)
-			{
-				ui.mouse_down(ev.clientX, ev.clientY);                  
-			};
-			drawingCanvas.onmouseup = function(ev)
-			{
-				ui.mouse_up(ev.clientX, ev.clientY);                  
-			};
-			document.onkeydown = function(ev)
-			{
-				ui.key_down(ev.keyCode);                  
-			};
-			document.onkeyup = function(ev)
-			{
-				ui.key_up(ev.keyCode);                  
-			};
-			document.onkeypress = function(ev)
-			{
-				ui.key_press(ev.keyCode);                  
-			};
+	drawingCanvas.onmousemove = function(ev)
+	{
+		ui.mousemove(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmousedown = function(ev)
+	{
+		ui.mousedown(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmouseup = function(ev)
+	{
+		ui.mouseup(ev.clientX, ev.clientY);                  
+	};	
 		    ms61 = new ms6( 
 	    g_ui_root.manager, g_ui_root);
                 ms61.rect(100, 100, 50, 100);
+		    ms62 = new ms6( 
+	    g_ui_root.manager, g_ui_root);
+                ms62.rect(200, 100, 50, 100);
+			document.onkeydown = function(ev)
+			{
+				ui.keydown(ev.keyCode);                  
+			};
+			document.onkeyup = function(ev)
+			{
+				ui.keyup(ev.keyCode);                  
+			};
+			document.onkeypress = function(ev)
+			{
+				ui.keypress(ev.keyCode);                  
+			};
             if (application.init)
             {
                 application.init();
