--- a/xss/production/test/sound.html
+++ b/xss/production/test/sound.html
@@ -59,48 +59,45 @@ new THREE.Scene(
 	var camera_1 = new THREE.QuakeCamera({
 	fov:50,aspect:1.5,near:1,far:10000,lookSpeed:0.0500000007,noFly:true
 	});
-                camera_1.position.y = 25
+                camera_1.position.y = 25;
 var light = 
 new THREE.DirectionalLight(
 );
 		;
 	scene.addLight(light);
-                light.position.y = 0.5
-                light.position.z = 1
+                light.position.y = 0.5;
+                light.position.z = 1;
 var container_1 = 
 new THREE.Object3D(
 );
-                container_1.position.x = 250
-                container_1.position.y = 30
-	var sphere_1_sphere = 
+                container_1.position.x = 250;
+                container_1.position.y = 30;
+	    var sphere_1_sphere = 
 new THREE.Sphere(
 20);
-	var sphere_1 = new THREE.Mesh(sphere_1_sphere,
-	);
-	scene.addObject(sphere_1);
+	    var sphere_1 = new THREE.Mesh(sphere_1_sphere, material_sphere1);
+	    scene.addObject(sphere_1);
 				container_1.addChild(sphere_1);
 				scene.addObject(container_1);
 var container_2 = 
 new THREE.Object3D(
 );
-                container_2.position.x = -250
-                container_2.position.y = 30
-	var sphere_2_sphere = 
+                container_2.position.x = -250;
+                container_2.position.y = 30;
+	    var sphere_2_sphere = 
 new THREE.Sphere(
 20);
-	var sphere_2 = new THREE.Mesh(sphere_2_sphere,
-	);
-	scene.addObject(sphere_2);
+	    var sphere_2 = new THREE.Mesh(sphere_2_sphere, material_sphere2);
+	    scene.addObject(sphere_2);
 				container_2.addChild(sphere_2);
 				scene.addObject(container_2);
-	var plane_1_plane = 
+	    var plane_1_plane = 
 new THREE.Plane(
 1000,1000);
-	var plane_1 = new THREE.Mesh(plane_1_plane,
-	);
-	scene.addObject(plane_1);
-                plane_1.position.y = 0.100000001
-                plane_1.rotation.x = -1.57
+	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
+	    scene.addObject(plane_1);
+                plane_1.position.y = 0.100000001;
+                plane_1.rotation.x = -1.57;
 if(ui)
 {
 	ui.load_resources(function(){		
