--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -133,7 +133,7 @@ function start(resolution)
 	}  
 	window.setTimeout(update, resolution);  
 }  
-                application.curr_sound = null
+                application.curr_sound = null;
 window.onload = function() 
 {
 	var Sound = new ms.ui.Sound();
@@ -166,11 +166,11 @@ window.onload = function()
 	};	
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
-                lbl1.text("click the sound you want to listen")
+                lbl1.text("click the sound you want to listen");
                 lbl1.position(220, 190);
 		    btnSound1 = new ms.ui.Button( 
 	    "images/sound_2.png","images/sound_2.png",g_ui_root.manager, g_ui_root);
-                btnSound1.set_height(10)
+                btnSound1.set_height(10);
 	btnSound1.click = function()
 	{    
 		sound_1.pause();
@@ -181,7 +181,7 @@ application.curr_sound.play();
                 btnSound1.rect(275, 210, 50, 10);
 		    btnSound2 = new ms.ui.Button( 
 	    "images/sound_1.png","images/sound_1.png",g_ui_root.manager, g_ui_root);
-                btnSound2.set_height(10)
+                btnSound2.set_height(10);
 	btnSound2.click = function()
 	{    
 		sound_2.pause();
@@ -192,13 +192,13 @@ application.curr_sound.play();
                 btnSound2.rect(275, 240, 50, 10);
 		    volume_bar = new ms.ui.ProgressBar( 
 	    null,g_ui_root.manager, g_ui_root);
-                volume_bar.value(50)
-                volume_bar.set_height(10)
+                volume_bar.value(50);
+                volume_bar.set_height(10);
                 volume_bar.rect(225, 120, 150, 10);
 		    btn1 = new ms.ui.Image( 
 	    "images/arrow_left.png",g_ui_root.manager, g_ui_root);
-                btn1.set_height(20)
-                btn1.src("images/arrow_left.png")
+                btn1.set_height(20);
+                btn1.src("images/arrow_left.png");
 	btn1.click = function()
 	{    
 		volume_bar.value(volume_bar.get_value() - 10);
@@ -207,8 +207,8 @@ application.curr_sound.volume -= 0.100000001;
                 btn1.rect(200, 115, 20, 20);
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_right.png",g_ui_root.manager, g_ui_root);
-                btn2.set_height(20)
-                btn2.src("images/arrow_right.png")
+                btn2.set_height(20);
+                btn2.src("images/arrow_right.png");
 	btn2.click = function()
 	{    
 		volume_bar.value(volume_bar.get_value() + 10);
@@ -217,11 +217,11 @@ application.curr_sound.volume += 0.100000001;
                 btn2.rect(380, 115, 20, 20);
 		    lbl3 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
-                lbl3.text("click small arrows to adjust volume")
+                lbl3.text("click small arrows to adjust volume");
                 lbl3.position(220, 100);
 		    btnPlay = new ms.ui.Button( 
 	    "images/play.png","images/play_over.png",g_ui_root.manager, g_ui_root);
-                btnPlay.set_height(50)
+                btnPlay.set_height(50);
 	btnPlay.click = function()
 	{    
 		application.curr_sound.play();
@@ -229,7 +229,7 @@ application.curr_sound.volume += 0.100000001;
                 btnPlay.rect(175, 300, 50, 50);
 		    btnPause = new ms.ui.Button( 
 	    "images/pause.png","images/pause_over.png",g_ui_root.manager, g_ui_root);
-                btnPause.set_height(50)
+                btnPause.set_height(50);
 	btnPause.click = function()
 	{    
 		application.curr_sound.pause();
@@ -237,7 +237,7 @@ application.curr_sound.volume += 0.100000001;
                 btnPause.rect(275, 300, 50, 50);
 		    btnStop = new ms.ui.Button( 
 	    "images/stop.png","images/stop_over.png",g_ui_root.manager, g_ui_root);
-                btnStop.set_height(50)
+                btnStop.set_height(50);
 	btnStop.click = function()
 	{    
 		application.curr_sound.pause();
