--- a/xss/production/test/ui_audio_1.html
+++ b/xss/production/test/ui_audio_1.html
@@ -117,11 +117,11 @@ window.onload = function()
 	};	
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
-                lbl1.text("click to create a new instance of a sound")
+                lbl1.text("click to create a new instance of a sound");
                 lbl1.position(220, 190);
 		    btnExplosion = new ms.ui.Button( 
 	    "images/bomb.png","images/bomb.png",g_ui_root.manager, g_ui_root);
-                btnExplosion.set_height(50)
+                btnExplosion.set_height(50);
 	btnExplosion.click = function()
 	{    
 		Sound.play("sounds/explosion.mp3");
@@ -129,7 +129,7 @@ window.onload = function()
                 btnExplosion.rect(290, 220, 50, 50);
 		    btnShoots = new ms.ui.Button( 
 	    "images/AK-47.png","images/AK-47.png",g_ui_root.manager, g_ui_root);
-                btnShoots.set_height(100)
+                btnShoots.set_height(100);
 	btnShoots.click = function()
 	{    
 		Sound.play("sounds/shoots.mp3");
