--- a/xss/production/test/3js_model.html
+++ b/xss/production/test/3js_model.html
@@ -41,7 +41,7 @@ var application = {};
 });
                 def_package_items.push(
             {
-		id:"",
+		id:"__json_model1",
 		resource_type:RESOURCE_JSON_MODEL,
 		src:"model/male02/Male02_slim.js"
 });
