--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -34,31 +34,31 @@ var application = {};
         var def_package_items = [];
                 def_package_items.push(
             {
-		id:"",
+		id:"__image1",
 		resource_type:RESOURCE_IMAGE,
 		src:"images/test1.png"
 });
                 def_package_items.push(
             {
-		id:"",
+		id:"__image2",
 		resource_type:RESOURCE_IMAGE,
 		src:"images/test2.png"
 });
                 def_package_items.push(
             {
-		id:"",
+		id:"__image3",
 		resource_type:RESOURCE_IMAGE,
 		src:"images/test3.png"
 });
                 def_package_items.push(
             {
-		id:"",
+		id:"__image4",
 		resource_type:RESOURCE_IMAGE,
 		src:"images/test4.png"
 });
                 def_package_items.push(
             {
-		id:"",
+		id:"__image5",
 		resource_type:RESOURCE_IMAGE,
 		src:"images/test5.png"
 });
